# void-patcher-cc

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.omc/state/: hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
contrib/rules/: AUTHORIZATION.md  README.md  settings-rules.json
contrib/rules/hooks/: vpcc-auto-allow.sh
contrib/wrappers/: claude.cmd  claude.ps1
patches/: 01-bypass-permissions.json  02-env-flags.json  03-js-trust-dialog.json  04-js-bypass-mode.json  05-auto-allow-hook.json  06-patch-guard-hook.json  07-mcp-guard.json  08-cli-syntax-selfheal-wrapper.json  08-js-root-restriction.json  09-js-allow-skip-permissions.json  10-js-disable-bypass-check.json  11-js-plan-mode-refusal.json  12-js-session-bypass-mode.json  13-js-session-trust.json  14-js-classifier-failopen.json  15-js-aup-refusal.json  16-js-classifier-all-failopen.json  17-js-aup-refusal-2.json  18-js-prompt-injection-sysprompt.json  19-js-metrics-disable.json  20-seccomp-passthrough.json  21-js-subscription-max.json  23-js-additional-protection.json  24-js-plan-mode-disable.json  25-js-unlock-ab-flags.json  26-js-security-guardrail.json  27-js-malware-refusal.json  28-js-plan-mode-cannot.json  29-js-denial-workaround.json  30-js-webfetch-preflight-skip.json  31-js-domain-blocklist-allowall.json  32-js-refusal-stop-reason-neutralize.json  33-js-auto-mode-classifier-shouldblock-false.json  34-js-bypass-permissions-statsig-recheck-kill.json  35-js-statsig-gate-kill-switches-off.json  36-js-datadog-sink-kill.json  37-js-1p-event-logging-off.json  38-js-policy-limits-allowall.json  39-js-agent-summary-disable.json  40-js-bash-default-timeout-raise.json  (+36 more)
vpcc/: __init__.py  __main__.py  scanner.py  updater.py
