[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "vpcc"
version         = "2.1.118"
description     = "Void Patcher for Claude Code — regex-signature patches, cli.js + Bun SEA, auto-update aware"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "GPL-3.0-or-later" }
authors         = [{ name = "VoidChecksum" }]
keywords        = ["claude-code", "patching", "cli", "reverse-engineering"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage   = "https://github.com/VoidChecksum/void-patcher-cc"
Repository = "https://github.com/VoidChecksum/void-patcher-cc"
Issues     = "https://github.com/VoidChecksum/void-patcher-cc/issues"

[project.scripts]
vpcc = "vpcc.__main__:main"

[tool.setuptools.packages.find]
include = ["vpcc*"]

[tool.setuptools.package-data]
vpcc = [
    "../patches/*.json",
    "../contrib/preload/*.js",
    "../contrib/rules/*.md",
    "../contrib/rules/*.json",
    "../contrib/rules/hooks/*.sh",
    "../contrib/wrappers/*",
    "../contrib/systemd/*",
]
